--- a/projects/my-message/package.json
+++ b/projects/my-message/package.json
@@ -1,6 +1,8 @@
 {
     "name": "current-build-provider",
-    "version": "0.0.8",
+    "version": "0.1.0",
+    "description": "<lib-current-build-provider [owner]='owner' [repo]='repo' [accessToken]='githubToken'></lib-current-build-provider'>",
+
     "peerDependencies": {
         "@angular/common": "^16.2.0",
         "@angular/core": "^16.2.0"
