--- a/projects/my-message/package.json
+++ b/projects/my-message/package.json
@@ -1,8 +1,22 @@
 {
     "name": "current-build-provider",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "description": "<lib-current-build-provider [owner]='owner' [repo]='repo' [accessToken]='githubToken'></lib-current-build-provider'>",
 
+
+
+
+    "keywords": [
+        "angular",
+        "components",
+        "ui"
+    ],
+    "author": "Shoaib Salim",
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/xoaeb/current-build-provider"
+    },
     "peerDependencies": {
         "@angular/common": "^16.2.0",
         "@angular/core": "^16.2.0"
